# prod4

prod/mysite/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
prod/mysite/mysite/: settings.py  urls.py
prod/mysite/shopapp/: forms.py
